# candle-tutorial

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
exercises/: q01_tensor_creation.rs  q02_dtype_and_device.rs  q03_tensor_arithmetic.rs  q04_reshaping.rs  q04b_attention_viz.rs  q05_indexing_slicing.rs  q06_broadcasting.rs  q07_linear_layer.rs  q08_layer_norm.rs  q09_rms_norm.rs  q10_rotary_embeddings.rs  q11_self_attention.rs  q12_kv_cache.rs  q13_mlp_block.rs  q14_varbuilder_loading.rs  q15_sampling.rs
src/: chat.rs  generate.rs  lib.rs  main.rs
src/models/: mod.rs  model_utils.rs  qwen3.rs
