[package]
name = "candle-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
hf-hub = "0.4.3"
records = "0.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = "0.22.2"
