[package]
name = "candle-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
axum = "0.8"
hf-hub = "0.4.3"
rand = "0.8"
records = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.22.2"
tokio = { version = "1", features = ["full"] }
